Added Register include GUI and About. Minimize and Application Close Buttons also added. Fixed Bugs.

--- a/ezShopping/ezShopping.csproj
+++ b/ezShopping/ezShopping.csproj
@@ -58,6 +58,12 @@
     <Compile Include="About.Designer.cs">
       <DependentUpon>About.cs</DependentUpon>
     </Compile>
+    <Compile Include="Register.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Register.Designer.cs">
+      <DependentUpon>Register.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +72,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="About.resx">
+      <DependentUpon>About.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Register.resx">
+      <DependentUpon>Register.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -94,6 +106,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icons8_shopping.ico" />
+    <None Include="Resources\LogoGRAU.png" />
     <None Include="Resources\about_32px.png" />
     <None Include="Resources\Minimize Window_32px.png" />
     <None Include="Resources\Close Window_32px.png" />
